fixed search icon visibility

--- a/css/style.scss
+++ b/css/style.scss
@@ -135,6 +135,10 @@ body {
   position: relative;
 }
 
+.icon-onsearch {
+  display: none;
+}
+
 #suggestions-list {
   display: flex;
   flex-direction: column;
@@ -531,6 +535,15 @@ footer {
 
   .container .trending-words {
     margin-bottom: 95px;
+  }
+
+  .icon-onsearch {
+    display: block;
+    visibility: hidden;
+  }
+
+  .icon-onsearch-visible {
+    visibility: visible;
   }
 
   .search-results {
